welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:21: error: value unary_! is not a member of Unit
	while (!finish()) {serpent()}
               ^